# NoteAgent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  main.py  main_multi.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
agent/: __init__.py  decision.py  exception_handler.py  perception.py  task_scheduler.py
config/: .env.example  __init__.py  config.py
doc/: LLM Wiki 功能详细设计文档.md  Phase 1 详细实施文档.md  Phase4_文件监控_实施文档.md  Phase5_知识网络_实施文档.md  Phase6_集成测试_实施文档.md  ReactAgent_vs_Pipeline_方案.md  Telegram Webhook模式使用指南.md  Ubuntu部署指南.md  llm-wiki-skill 集成方案.md  第三阶段完成总结.md  第四阶段完成总结.md  飞书集成实施总结.md  飞书（Feishu）App笔记收集功能详细设计文档.md
mydoc/: LLM Wiki 功能详细设计文档（按日归档版）.md  LLM_WIKI_COMPLETE_GUIDE.md  Phase 2 详细实施文档.md  Phase3_索引管理_实施文档.md  基于Telegram（TG）的AI笔记自动收集系统功能设计文档（Python版).md  基于Telegram（TG）的AI笔记自动收集系统架构设计文档.md  基于自定义AI Agent的Telegram（TG）AI笔记自动收集系统功能设计文档.md  第三阶段完成总结.md  第四阶段完成总结.md  飞书Webhook模式使用指南.md
storage/: __init__.py  context_cache.py  log_manager.py  temp_manager.py
test/: conftest.py  test_auto_category_creation.py  test_category_manager.py  test_config.py  test_feishu_enhanced.py  test_framework.py  test_full_integration.py  test_github_tool.py  test_llm_adapter.py  test_llm_adapters.py  test_move_commands.py  test_platforms.py  test_source_type.py  test_tooluse_example.py  test_utils.py  test_web_tool.py  test_webhook.py  test_wiki_commands.py  test_wiki_config.py  test_wiki_phase1.py  test_wiki_phase2.py  test_wiki_phase3.py  test_wiki_phase4.py  test_wiki_phase5.py  test_wiki_phase6.py  test_wiki_pipeline.py
tools/: llm.py  (+12 more)
(+16 files in other folders)
